# apodex

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: app.rs  directories.rs  main.rs  runtime.rs  widgets.rs  windows.rs
app/src/app/: actions.rs  apod_data.rs
app/src/runtime/: apod_data.rs  apod_media.rs  file_picker.rs  scraper.rs  task.rs
app/src/widgets/: apod_table.rs
app/src/windows/: data.rs  details.rs  export.rs  import.rs  scrape.rs
examples/: archive_all_html.rs  parse_html_archive.rs
lib/: Cargo.toml
lib/examples/: basic.rs  parse_html_archive.rs
lib/src/: archiving.rs  client.rs  date.rs  lib.rs  media.rs  parsing.rs  scraping.rs
lib/src/archiving/: html.rs
lib/src/client/: reqwest.rs
lib/src/media/: heed.rs
lib/src/parsing/: explanation.rs  media_url.rs  quality_control.rs  title.rs  verbose.rs
src/: archiving.rs  lib.rs  parsing.rs  scraper.rs  scraping.rs
src/archiving/: html.rs
src/client/: reqwest.rs
src/parsing/: quality_control.rs
