[package]
name = "apodex"
version = "0.1.0"
edition = "2024"

[features]
default = []
archiving = ["bitcode", "zstd"]
reqwest-client = ["reqwest"]
scraping = ["async-stream", "futures", "tokio"]

[dependencies]
async-stream = { version = "0.3.6", optional = true }
async-trait = "0.1.89"
bitcode = { version = "0.6.9", optional = true }
chrono = "0.4.42"
futures = { version = "0.3.31", optional = true }
reqwest = { version = "0.13.1", optional = true }
scraper = "0.25.0"
tokio = { version = "1.49.0", optional = true, features = ["rt-multi-thread"] }
thiserror = "2.0.17"
zstd = { version = "0.13.3", optional = true }

[dev-dependencies]
indicatif = "0.18.3"
tokio = { version = "1.49.0", features = ["macros"] }

[[example]]
name = "archive_all_html"
required-features = ["archiving", "reqwest-client", "scraper"]

[[example]]
name = "basic"
required-features = ["reqwest-client"]

[[example]]
name = "parse_html_archive"
required-features = ["archiving"]