[package]
name = "apodex"
version = "0.1.0"
edition = "2024"

[features]
default = []
archiving = ["bitcode", "zstd"]
heed-media-cache = ["bitcode", "heed"]
include-html-archive = []
reqwest-client = ["leaky-bucket", "reqwest"]

[dependencies]
async-trait = "0.1.89"
bitcode = { version = "0.6.9", optional = true }
chrono = "0.4.42"
heed = { version = "0.22.0", optional = true }
leaky-bucket = { version = "1.1.2", optional = true }
reqwest = { version = "0.13.1", optional = true }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"], optional = true }
thiserror = "2.0.17"
zstd = { version = "0.13.3", optional = true }
regex = "1.12.2"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros"] }

[[example]]
name = "basic"
required-features = ["reqwest-client"]